# GR_Simulator

./: .cursor-review-1-2.patch  .cursor-review-1-3.patch  .cursor-review.patch  .gitignore  GR_Simulator_Blueprint.docx  README.md  start_simulator.py
_bmad-output/implementation-artifacts/: 1-1-initialize-core-simulation-workspace-and-run-pipeline.md  1-2-implement-schwarzschild-physics-and-geodesic-integration.md  1-3-object-catalog-custom-objects-and-runtime-controls.md  2-1-build-3d-viewport-camera-controls-and-orbit-trails.md  2-2-implement-real-time-telemetry-and-validation-strip.md  2-3-guided-expert-ux-modes-and-accessibility-baseline.md  3-1-implement-validation-suite-with-mercury-benchmark.md  (+10 more)
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routers/: reports.py  runs.py
backend/app/contracts/: envelope.py  runs.py
backend/app/domain/physics/: christoffel.py  metric.py
backend/app/domain/simulation/: engine.py
backend/app/domain/validation/: benchmarks.py  checker.py  exports.py  reports.py
backend/tests/integration/: test_exports.py  test_runs_api.py  test_telemetry_api.py  test_validation_api.py
backend/tests/regression/: test_deterministic_seed.py  test_prediction_replay.py  test_save_load_determinism.py
backend/tests/unit/: test_benchmarks.py  test_physics_kernels.py  test_prediction.py  test_reports.py  test_scenarios.py  test_telemetry_channels.py  test_thrust_physics.py  test_trajectory_prediction.py
docs/: TECHNICAL_DETAILS.md  index.md  project-overview.md
ui/: index.html  package-lock.json  package.json  tsconfig.json
(+43 files in other folders)
