[project]
name = "grsimulator-backend"
version = "0.1.0"
description = "GRsimulator backend API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.135.0,<0.136.0",
  "pydantic>=2.13.0,<2.14.0",
  "numpy>=2.0.0",
  "uvicorn>=0.35.0",
  "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
